## v2.2.0 - dev
  - Added a full auto-upgrade solution:
    - Aupgrade client integrated into NPBackup, that can be called manually via --auto-upgrade or automatically run every n backups
    - Upgrade server which servers files and their metadata
  - Improved setup.py to provide launch scripts for both Linux and Windows platforms
  - Made windows cloud file filter optional (enabled by default)
  - Added default configuration settings
  - Rewrite configuration gui into a tabbed gui
  - Updated restic binary to restic 0.15.1 compiled with go1.19.5

## v2.1.0 - 29/01/2023
  - Added execution time information
  - Code cleanup
    - Refactor runner into a class
    - Refactor npbackup into package
    - Adding missing typing
    - Code is now formatted with black
    - Code must now pass pylint and flake8
  - Workaround for painfully slow sg.TreeData window.close()
  - Simplify npbackup shortcut
  - Shift default interval from 23H30 to 24H
  - Fixed missing translations for admin password popups

## v2.0.0 - 24/02/2023

  - First open public release
  - Refactor GUI so actions become non-blocking
    - Added loader animation for gui events
    - Added backup window with current state
    - Added internationalization support (currently en and fr)
  - Refactor restic.ls function to return a generator since restic ls command gives chunks of json, which is bad memory wise when parsing each chunk into a big list
  - On Windows, "The cloud operation is not supported on a read-only volume." and "The media is write protected." errors will not make backup fail, see #4155
    - This fix can be removed once #4155 is resolved, see # TEMP-FIX-4155 comment in restic_wrapper package
  - Added Additional backup parameter option
  - Added optional backup tags
  - Added optional prometheus group label and additional labels entries
  - Make sure backend connections number parameter works with all backends