@@ -59,3 +59,8 @@ en:
   auto_upgrade_launch: Launch auto upgrade
   auto_ugprade_will_quit: Warning, launching an upgrade procedure will quit this program without notice. You will have to wait 5 minutes before launching it again for the upgrade to complete
   auto_upgrade_failed: Auto upgrade procedure failed, see logs for further details
+
+  create_scheduled_task_every: Create scheduled task every
+  scheduled_task_explanation: This is for Windows only. On Linux, please create a crontab entry with `npbackup --backup --config-file /etc/npbackup.conf`
+  scheduled_task_creation_success: Scheduled task created successfuly
+  scheduled_task_creation_failure: Scheduled task could not be created. See logs for further info
