@@ -2,6 +2,7 @@
   - Added a full auto-upgrade solution:
     - Aupgrade client integrated into NPBackup, that can be called manually via --auto-upgrade or automatically run every n backups
     - Upgrade server which servers files and their metadata
+  - Added a gui to create a scheduled task under Windows
   - Improved setup.py to provide launch scripts for both Linux and Windows platforms
   - Made windows cloud file filter optional (enabled by default)
   - Added default configuration settings
